# vrf-core

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
api/: docs.md  main.rs  routes.rs
api/handlers/: mod.rs
examples/: sample_payloads.rs
src/: helpers.rs  lib.rs
src/utils/: hash.rs
src/vrf/: bls.rs  commit.rs  mod.rs  types.rs
tests/: statistical_tests.rs  vrf_tests.rs
