[package]
name = "nebula-vrf"
version = "0.1.0"
edition = "2024"

[dependencies]
blst = { git = "https://github.com/supranational/blst", branch = "master", package = "blst" }
rand = "0.8"
sha2 = "0.10"         # For hashing (e.g. SHA256)
hex = "0.4"           # For debugging/log output
serde = { version = "1.0", features = ["derive"] }  
statrs = "0.16"  
