[package]
name = "nebula-vrf"
version = "0.1.0"
edition = "2021"
description = "BLS12-381 VRF core for Soroban: local randomness with optional on-chain verification"
license = "MIT"
repository = "https://github.com/NebulaVRF/vrf-core"
readme = "README.md"
keywords = ["vrf", "bls12-381", "soroban", "randomness", "stellar"]
categories = ["cryptography", "algorithms"]

[dependencies]
blst = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
statrs = "0.16"

[features]
default = []
api = ["axum", "tokio", "serde", "serde_json", "tracing", "tracing-subscriber"]


[[bin]]
name = "nebula_vrf_api"
path = "api/main.rs"
required-features = ["api"]